changed formatting strings to String.format